Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47084

REG [5.4.2 - 5.5] Windows 7/Vista style: Quick Combobox item is drawn with frame in the line

XMLWordPrintable

    • If46ebf8115b36f45b4b5e6068ddc0d61afe307b8

      Steps to reproduce:

      1) Run quick/controls/gallery example
      2) Click Input tab
      3) Open Combobox

      See attached screenshots of the difference. Qt 5.5 combobox item is drawn with text width frame in the line.

        1. quick-combo-drawing-542.PNG
          32 kB
          Qt Support
        2. quick-combo-drawing-550.PNG
          33 kB
          Qt Support
        3. 0001-Add-debug-proxy-style-to-gallery-example.patch
          7 kB
          Friedemann Kleint
        4. qtbug47084.qml
          0.3 kB
          Friedemann Kleint
        5. qtbug47084.zip
          3 kB
          Friedemann Kleint
        6. qtbug47084_diag.diff
          3 kB
          Friedemann Kleint
        7. qtbug47084_log.txt
          34 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes